fix: footer subscribe form; and loader on mobile;

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2302,6 +2302,11 @@ ul, ol {
   height: 900px;
   border-radius: 900px;
 }
+@media only screen and (max-width: 1080px) {
+  .db-page--home .db-section--banner .db-container .db-row .db-col:nth-of-type(1)::before {
+    display: none;
+  }
+}
 .db-page--home .db-section--banner .db-container .db-row .db-col:nth-of-type(1) h1 {
   position: relative;
   z-index: 2;
