--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -612,6 +612,10 @@
               width: 900px;
               height: 900px;
               border-radius: 900px;
+
+              @media only screen and (max-width: 1080px) {
+                display: none;
+              }
             }
 
             h1 {
